--- a/Diff_editor/src/main/webapp/style/editor.css
+++ b/Diff_editor/src/main/webapp/style/editor.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*!-----------------------------------------------------------
  * Copyright (c) Microsoft Corporation. All rights reserved.
  * Version: 0.11.6(304bb33e6e20d081d487cd807add896acf64c9b9)
@@ -467,8 +466,10 @@
 .monaco-scrollable-element {
 	position: absolute; 
 	overflow: hidden; 
-	left: 53px; 
-	width: 490px; 
+	left: 53px;
+	width: auto; 
+	height: auto; 
+	width: 890px; 
 	height: 8000px;
 }
 
