--- a/Diff_editor/src/main/webapp/style/addition.css
+++ b/Diff_editor/src/main/webapp/style/addition.css
@@ -49,3 +49,10 @@
 .popover-content {
 	padding: 9px 14px
 }
+
+.col-center-block {  
+    float: none;  
+    display: block;  
+    margin-left: auto;  
+    margin-right: auto;  
+}  
