--- a/Diff_editor/src/main/webapp/css/main.css
+++ b/Diff_editor/src/main/webapp/css/main.css
@@ -7,7 +7,10 @@
 */
 
 /* Reset */
-
+#example1:hover
+{ 
+cursor:hand;color: #FF00F;
+}
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -2081,7 +2084,7 @@
 	#header {
 		background-color: #4696e5;
 		color: #d0e4f8;
-		padding: 4.5em 0 2.5em 0 ;
+		padding: 9.5em 0 2.5em 0 ;
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
