--- a/src/main/webapp/demo2/demo.css
+++ b/src/main/webapp/demo2/demo.css
@@ -23,43 +23,43 @@
 
 /** SHAPES **/
 
-[data-shape=Rectangle] {
-    width:210px;
+[data-shape=Rec_Def] {
+    width:300px;
     height:70px;
-    left:380px;
+    left:280px;
     top:505px;
-    background-image:url(rectangle.png);
+    /*background-image:url(rectangle.png);*/
 }
 
-[data-shape=Ellipse] {
-    width:210px;
+[data-shape=Rec_Use] {
+    width:300px;
     height:70px;
-    left:250px;
-    top:300px;
-    background-image:url(ellipse.png);
+    left:480px;
+    top:305px;
+    /*background-image:url(rectangle.png);*/
 }
 
-[data-shape=Circle] {
-    width:150px;
-    height:150px;
+[data-shape=Rec_Use2] {
+    width:300px;
+    height:70px;
     left:100px;
     top:60px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    background-image:url(circle.png);
+    /*display:flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*background-image:url(circle.png);*/
 }
 
 [data-shape=Triangle] {
     width:150px;
     height:150px;
-    background-image:url(triangle.png);
+    /*background-image:url(triangle.png);*/
 }
 
 ._90[data-shape=Triangle] {
     width:150px;
     height:150px;
-    background-image:url(triangle_90.png);
+    /*background-image:url(triangle_90.png);*/
 }
 
 [data-shape=Diamond] {
@@ -67,5 +67,5 @@
     height:150px;
     left:550px;
     top:150px;
-    background-image:url(diamond.png);
+    /*background-image:url(diamond.png);*/
 }
