text align center

--- a/src/main/webapp/demo2/demo.css
+++ b/src/main/webapp/demo2/demo.css
@@ -14,7 +14,7 @@
     opacity:0.7;
     position:absolute;
     cursor:pointer;
-    text-align:center;
+    text-align:left;
     color:#333;
     display:flex;
     align-items: center;
