add new features

--- a/src/main/webapp/demo/demo.css
+++ b/src/main/webapp/demo/demo.css
@@ -2,7 +2,9 @@
     /* for IE10+ touch devices */
     touch-action:none;
 }
-
+.flowchart-demo{
+    height: 1000px;
+}
 .flowchart-demo .window {
     border: 1px solid #346789;
     box-shadow: 2px 2px 19px #aaa;
@@ -12,13 +14,13 @@
     -moz-border-radius: 0.5em;
     border-radius: 0.5em;
     opacity: 0.8;
-    width: 80px;
-    height: 80px;
+    width: 400px;
+    height:120px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    text-align: center;
+    /*text-align: center;*/
     z-index: 20;
     position: absolute;
     background-color: #eeeeef;
