--- a/src/main/webapp/demo/demo.css
+++ b/src/main/webapp/demo/demo.css
@@ -7,9 +7,9 @@
 
     height: 60vh;
 }
-.h2,h2{
-    margin-top: -40px;
-}
+/*.h2,h2{*/
+/*    margin-top: -40px;*/
+/*}*/
 
 .blank{
     position: absolute;
@@ -46,19 +46,20 @@
 }
 
 #rightEditor {
-    border: 1px solid gray;
+    /*border: 1px solid gray;*/
    /*float: right;*/
     z-index: 200;
+    height:400vh;
 }
 
 #panic-button{
     position: fixed;
     top:200px;
 }
-#rightEditor:hover {
+/*#rightEditor:hover {*/
 
-    box-shadow: 0 0 0 3px tomato;
-}
+/*    box-shadow: 0 0 0 3px tomato;*/
+/*}*/
 
 
 .jtk-node{
@@ -178,4 +179,105 @@ path, .jtk-endpoint {
 
 .jtk-overlay {
     background-color:transparent;
+}
+
+/*.dropdown{*/
+/*    margin-left: 50px;*/
+/*}*/
+
+body{
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: #EDF1F9;
+}
+
+#leftPanel{
+    border-width: 1px;
+    /*border: solid #e1e1e8;*/
+    background-color: #ffffff;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    margin-top:20px;
+}
+
+#rightPanel{
+    border-width: 1px;
+    /*border: solid #e1e1e8;*/
+    background-color: #ffffff;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    margin-top:20px;
+    margin-left:20px;
+}
+
+#selectionHeader{
+    border-width: 1px;
+    /*border: solid #e1e1e8;*/
+    background-color: #ffffff;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+}
+
+#rightTitleHeader{
+    border-width: 1px;
+    /*border: solid #e1e1e8;*/
+    background-color: #ffffff;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 10%) inset;
+    margin-left: 20px;
+}
+
+body > div:nth-child(2) > div.col-md-7 > div > div > button{
+    margin-top: 20px;
+}
+
+h1{
+    color:#2c7be5;
+    font-family: Poppins,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+}
+h2{
+    color:#5e6e82;
+    margin-top:15px;
+    margin-bottom: 15px;
+}
+
+h4{
+    padding-left:15px;
+}
+#muButton{
+    color:#2c7be5;
+    margin-top:15px;
+}
+
+.nav-link-icon {
+    font-size: .875rem;
+    width: 12px;
+    height: 12px;
+    max-width: 1.5rem;
+    font-size: .875rem;
+}
+
+#rightPanel {
+    padding-left:0px;
+    padding-right:0px;
+}
+
+.row{
+    margin-left:120px;
 }
