--- a/src/main/webapp/demo/demo.css
+++ b/src/main/webapp/demo/demo.css
@@ -66,6 +66,7 @@
     position: absolute;
 }
 .flowchart-demo .window {
+
     border: 2px solid #346789;
     box-shadow: 2px 2px 19px ;
     -o-box-shadow: 2px 2px 19px #aaa;
@@ -108,6 +109,7 @@ svg {
     -o-box-shadow: 2px 2px 19px #444;
     -webkit-box-shadow: 2px 2px 19px #444;
     -moz-box-shadow: 2px 2px 19px #444;
+    cursor: pointer;
     /*opacity: 0.6;*/
 }
 
@@ -317,4 +319,21 @@ h4{
     background-color: #5C96BC;
     color: white;
     border: 1px solid white;
+}
+
+#defuse{
+    background-color: peachpuff;
+}
+#override{
+    background-color: blue;
+
+}
+#abstract {
+    background-color: indianred;
+}
+#implement {
+    background-color: yellow;
+}
+#systematic {
+    background-color: aqua;
 }
